--- a/location1.html
+++ b/location1.html
@@ -1,8 +1,14 @@
 <iframe id="streetview-frame" width="100%" height="400px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 <script>
-let currentLat = 39.6738844;
-let currentLng = -75.9476685;
+// Helper to get URL parameters
+function getUrlParam(name) {
+    const url = new URL(window.location.href);
+    return url.searchParams.get(name);
+}
+
+let currentLat = getUrlParam('y') || 39.6738844;
+let currentLng = getUrlParam('x') || -75.9476685;
 
 function updateStreetView(lat, lng) {
     currentLat = lat;
@@ -12,8 +18,8 @@ function updateStreetView(lat, lng) {
     iframe.src = streetViewUrl;
 }
 
+// Listen for Experience Builder feature selection events
 window.addEventListener('message', function(event) {
-    console.log('Received message:', event.data); // Debugging line
     if (event.data) {
         let feature = null;
         if (event.data.feature) {
@@ -25,15 +31,13 @@ window.addEventListener('message', function(event) {
         }
         if (feature && feature.attributes) {
             const attrs = feature.attributes;
-            // Try multiple possible field names
-            let lat = attrs.Y_Mid || attrs.y_mid || attrs.Latitude || attrs.latitude;
-            let lng = attrs.X_Mid || attrs.x_mid || attrs.Longitude || attrs.longitude;
-            if (lat && lng) {
-                updateStreetView(lat, lng);
+            if (attrs.X_Mid && attrs.Y_Mid) {
+                updateStreetView(attrs.Y_Mid, attrs.X_Mid);
             }
         }
     }
 });
 
+// Initialize with URL or default coordinates
 updateStreetView(currentLat, currentLng);
 </script>
